# stefbmstu

dz info 2/: CMakeLists.txt  customers.csv  main.cpp  products.csv  sales.csv
dz seminar 1-2/: 1  1.cpp  10  10.cpp  11  11.cpp  2  2.cpp  3  3.cpp  4  4.cpp  5  5.cpp  6  6.cpp  7  7.cpp  8  8.cpp  9  9.cpp
dz seminar 10/: 1  1.cpp  10  10.cpp  11  11.cpp  2  2.cpp  3  3.cpp  4  4.cpp  5  6  6.cpp  7  7.cpp  8  8.cpp  9  9.cpp  copy.txt  data.txt  file1.txt  input.txt  numbers.txt  output.txt  power_log.txt  source.txt  tempCodeRunnerFile  tempCodeRunnerFile.cpp  temperature_data.txt  text.txt  vibration_log.txt
dz seminar 11/: 1  1.cpp  10  10.cpp  11.cpp  12.cpp  2  2.cpp  3  3.cpp  4.cpp  5.cpp  6  6.cpp  7.cpp  8.cpp  9  9.cpp  book.txt  config.json  config.txt  products.csv  products2.csv
dz seminar 12/: 1  1.cpp  2  2.cpp  3  3.cpp  4  4.cpp  5  5.cpp  6  6.cpp  7.cpp  8  8.cpp  Bank.txt  Job.txt  students.txt
dz seminar 13/: 1  1.cpp  2  2.cpp  3.cpp
dz seminar 14/: 1.cpp  2.cpp
dz seminar 4/: 1  1.cpp  10  10.cpp  11  11.cpp  12  12.cpp  13.cpp  14.cpp  2  2.cpp  3  3.cpp  4  4.cpp  5  5.cpp  6  6.cpp  6_v2  6_v2.cpp  7  7.cpp  8  8.cpp  9  9.cpp
dz seminar 5/: 1.cpp  10  10.cpp  11  11.cpp  12  12.cpp  13  13.cpp  14  14.cpp  15.cpp  2  2.cpp  3  3.cpp  4  4.cpp  5  5.cpp  6  6.cpp  7  7.cpp  8  8.cpp  9  9.cpp  tempCodeRunnerFile.cpp
dz seminar 7/: 1  1.cpp  10.cpp  11  11.cpp  12  12.cpp  13  13.cpp  14  14.cpp  15  15.cpp  16  16.cpp  2  2.cpp  3  3.cpp  4  4.cpp  5  5.cpp  6  6.cpp  7  7.cpp  8  8.cpp  9  9.cpp
dz seminar 8/: 1  1.cpp  10.cpp  2.cpp  3  3.cpp  4  4.cpp  5  5.cpp  6  6.cpp  7  7.cpp  8  8.cpp  9  9.cpp
dz seminar 9/: 1  1.cpp  10  10.cpp  11  11.cpp  12  12.cpp  13.cpp  14  14.cpp  15  15.cpp  2  2.cpp  3  3.cpp  4  4.cpp  5.cpp  6  6.cpp  7  7.cpp  8  8.cpp  9  9.cpp
dz seminat 6/: 1  1.cpp  10  10.cpp  11  11.cpp  12  12.cpp  13  13.cpp  14  14.cpp  15  15.cpp  16  16.cpp  2  2.cpp  3  3.cpp  4  4.cpp  5  5.cpp  6  6.cpp  7  7.cpp  8  8.cpp  9  9.cpp
lab3/inf/: 3.sql  4.sql  5.sql  9(запросы из 5 номера (3)).sql
lab3/oaip/: 1  1.cpp  tasks.txt  tempCodeRunnerFile  tempCodeRunnerFile.cpp
lab4/: CMakeLists.txt
lab4/src/: main.cpp
seminar 3 - dz/: 1  1.cpp  2  2.cpp  3  3.cpp  4  4.cpp  5  5.cpp  6  6.cpp  7  7.cpp  8  8.cpp
seminar 3 - dz - geo/: 1  1.cpp  2  2.cpp  3  3.cpp  4  4.cpp  5  5.cpp  6  6.cpp  7  7.cpp  8  8.cpp  9  9.cpp
sql_файлы_для_lab3/: 10(запросы из 5 номера(4)).sql  11*.sql  2.sql  6.sql  7.sql  8(запросы из 5 номера).sql
модульное дз 1/: script.sh
